samples/_failures_safe/1761788950_2f1a0c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9d8867d.c: In function ‘main’:
./samples/SAFE/__tmp_f9d8867d.c:190:16: error: missing terminating " character
  190 |         printf("\nRegistration complete! Thank you, %s, age %
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f9d8867d.c:190:9: error: expected expression at end of input
  190 |         printf("\nRegistration complete! Thank you, %s, age %
      |         ^~~~~~
./samples/SAFE/__tmp_f9d8867d.c:190:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9d8867d.c:190:9: error: expected declaration or statement at end of input
